@@ -34,6 +34,8 @@ class STATUS_INDEX
   const GENI_NO_RESOURCES=5; 
   const GENI_BUSY=6;
   const GENI_NO_STATUS=7;
+  // Used by OpenGENI - like configuring?
+  const GENI_PENDING=8;
 }
 
 class STATUS_MSG
@@ -47,6 +49,8 @@ class STATUS_MSG
   const GENI_NO_RESOURCES = "no resources"; 
   const GENI_BUSY = "busy";
   const GENI_NO_STATUS = "error";
+  // Used by OpenGENI - like configuring?
+  const GENI_PENDING = "pending";
 }
 
 class STATUS_CLASS
@@ -60,6 +64,8 @@ class STATUS_CLASS
   const GENI_NO_RESOURCES = "noresources"; 
   const GENI_BUSY = "busy";
   const GENI_NO_STATUS = "nostatus";
+  // Used by OpenGENI - like configuring?
+  const GENI_PENDING = "pending";
 }
 
 
@@ -70,7 +76,8 @@ $GENI_MESSAGES = array(
   STATUS_MSG::GENI_UNKNOWN,
   STATUS_MSG::GENI_NO_RESOURCES,
   STATUS_MSG::GENI_BUSY,
-  STATUS_MSG::GENI_NO_STATUS);
+  STATUS_MSG::GENI_NO_STATUS,
+  STATUS_MSG::GENI_PENDING);
 
 $GENI_MESSAGES_REV = array( 
   STATUS_MSG::GENI_CONFIGURING => STATUS_INDEX::GENI_CONFIGURING,
@@ -79,7 +86,8 @@ $GENI_MESSAGES_REV = array(
   STATUS_MSG::GENI_UNKNOWN => STATUS_INDEX::GENI_UNKNOWN,
   STATUS_MSG::GENI_NO_RESOURCES => STATUS_INDEX::GENI_NO_RESOURCES,
   STATUS_MSG::GENI_BUSY => STATUS_INDEX::GENI_BUSY,
-  STATUS_MSG::GENI_NO_STATUS => STATUS_INDEX::GENI_NO_STATUS);
+  STATUS_MSG::GENI_NO_STATUS => STATUS_INDEX::GENI_NO_STATUS,
+  STATUS_MSG::GENI_PENDING => STATUS_INDEX::GENI_PENDING);
 
 $GENI_CLASSES = array( 
   STATUS_CLASS::GENI_CONFIGURING,
@@ -88,7 +96,8 @@ $GENI_CLASSES = array(
   STATUS_CLASS::GENI_UNKNOWN,
   STATUS_CLASS::GENI_NO_RESOURCES,
   STATUS_CLASS::GENI_BUSY,
-  STATUS_CLASS::GENI_NO_STATUS);
+  STATUS_CLASS::GENI_NO_STATUS,
+  STATUS_CLASS::GENI_PENDING);
 
 
 /*
