@@ -71,6 +71,7 @@ $GENI_MESSAGES_REV = array(
 		       STATUS_MSG::GENI_FAILED => STATUS_INDEX::GENI_FAILED,
   		       STATUS_MSG::GENI_UNKNOWN => STATUS_INDEX::GENI_UNKNOWN,
   		       STATUS_MSG::GENI_NO_RESOURCES => STATUS_INDEX::GENI_NO_RESOURCES,
+  		       STATUS_MSG::GENI_PENDING => STATUS_INDEX::GENI_PENDING,
 		       STATUS_MSG::GENI_BUSY => STATUS_INDEX::GENI_BUSY);
 
 foreach ($obj as $am_url => $am_status) {
@@ -84,7 +85,12 @@ foreach ($obj as $am_url => $am_status) {
        $geni_status = $am_status['geni_status'];
        $geni_status = strtolower( $geni_status );
        $status_item['geni_status'] = $geni_status;
-       $status_item['status_code'] = $GENI_MESSAGES_REV[ $geni_status ]; //STATUS_INDEX::GENI_READY; //FIXME
+       if (array_key_exists($geni_status, $GENI_MESSAGES_REV)) {
+	 $status_item['status_code'] = $GENI_MESSAGES_REV[ $geni_status ]; //STATUS_INDEX::GENI_READY; //FIXME
+       } else {
+	 error_log("Unrecognized status message '$geni_status' from AM $am_url");
+	 $status_item['status_code'] = STATUS_INDEX::GENI_UNKNOWN;
+       }
        if (array_key_exists("geni_expires", $am_status )) {
 	 // DCN (ION/MAX)
 	 $geni_expires = $am_status['geni_expires'];
